[gd_scene load_steps=2 format=3 uid="uid://biya2j8e7u66t"]

[ext_resource type="Script" path="res://PART - BASE/SCRIPTS/dev_mode.gd" id="1_7caty"]

[node name="DevMod" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_7caty")

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -21.5
offset_right = 75.0
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "ÃŠtes vous un dev ?"

[node name="Access" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 1051.0
offset_top = 141.0
offset_right = 1142.0
offset_bottom = 184.0
focus_mode = 0
text = "Full Access"

[node name="GodMod" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 1053.0
offset_top = 200.0
offset_right = 1141.0
offset_bottom = 239.0
focus_mode = 0
action_mode = 0
text = "GodMod"

[node name="Unlock Power" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 1026.0
offset_top = 254.0
offset_right = 1141.0
offset_bottom = 293.0
focus_mode = 0
action_mode = 0
text = "Unlock Power"

[node name="End_CVL" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 1047.0
offset_top = 572.0
offset_right = 1138.0
offset_bottom = 615.0
focus_mode = 0
text = "End CVL"

[connection signal="pressed" from="Access" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GodMod" to="." method="_on_god_mod_pressed"]
[connection signal="pressed" from="Unlock Power" to="." method="_on_unlock_power_pressed"]
[connection signal="pressed" from="End_CVL" to="." method="_on_end_cvl_pressed"]
